@@ -2,7 +2,8 @@ version 1.1-beta2 xx - 2011
 . [NEW] v2.0 forward ported changes:
 			LabelBMFont: added setFntFile method
 			Animation: Added new animation format that supports delays per frame and notifications per frame
-. [NEW] All: Code is compatible with ARC (issue #1199)
+			Actions: Added ActionTargeted action. Useful to target other nodes from a sequence.
+. [NEW] All: Code is compatible with ARC (issue #1199) 
 . [NEW] Node: Added onExitTransitionDidStart (issue #792)
 . [NEW] ParticleSystem: supports animations in new animation format 
 . [NEW] TileMap: supports in-memory TMX map creation (issue #1239)
